--- a/analysis/DimensionReduction_Clustering.Rmd
+++ b/analysis/DimensionReduction_Clustering.Rmd
@@ -21,7 +21,7 @@ source("https://raw.githubusercontent.com/yasinkaymaz/cellRtools/master/main/fun
 load("data/Tasic2018-reAnalysis.RData")
 ```
 
-## TSNE plots of All ALM cells in the study 
+## TSNE plots of **all ALM** cells in the study 
 
 These plots show the level of expression diversity among all ALM cells with lower dimensions. Cells are colored based on various covariates such as brain region, cell class, cluster id, etc.
 
@@ -40,7 +40,7 @@ TSNEPlot(Tasic2018, group.by="subclass")
 TSNEPlot(Tasic2018, group.by="class")
 ```
 
-## Only cell clusters of interest
+## **Only cell clusters of interest**
 
 I extracted the cells of interest which are categorized into 8 L5 IT subgroups and 3 L5 PT subgroups resulting in ~2700 cells. Labels and marker genes attributed to each group (from publication) are as follows:
 
@@ -65,7 +65,7 @@ TSNEPlot(L5ALM.ITPT, group.by="subclass")
 
 ## Colored by subgroup labels
 
-```{r echo=FALSE, fig.height=10, fig.width=15}
+```{r echo=FALSE, fig.height=8, fig.width=10}
 TSNEPlot(L5ALM.ITPT, group.by="cluster", do.label = T)
 ```
 
