--- a/analysis/DE_L5_IT-PT.Rmd
+++ b/analysis/DE_L5_IT-PT.Rmd
@@ -9,11 +9,12 @@ output: html_document
 knitr::opts_chunk$set(echo = TRUE)
 library(plotly)
 library(DT)
+library(tidyverse)
 options(width = 80)
 source("https://raw.githubusercontent.com/yasinkaymaz/cellRtools/master/main/functions.R")
 ```
 
-## Differentially expressed genes between PT and IT
+# Differentially expressed genes between PT and IT
 
 ```{r echo=FALSE}
 
@@ -55,6 +56,21 @@ allmarkers.subclass  %>% select(-p_val)%>% filter(cluster == "L5 PT") %>% filter
   ))
 ```
 
+## Expression heatmap of top 200 differentially expressed genes between **IT and PT**
+
+```{r echo=FALSE, message=F, warning=F, fig.height=20, fig.width=20}
+top100 <- allmarkers.subclass %>% filter(p_val_adj < 0.01) %>% group_by(cluster) %>% top_n(100, avg_logFC)
+L5ALM.ITPT = SetAllIdent(L5ALM.ITPT, id = 'subclass')
+DoHeatmap(object = L5ALM.ITPT, genes.use = top100$gene, slim.col.label = TRUE, remove.key = TRUE,group.label.loc="top",group.label.rot=T)
+```
+
+## Same heatmap as above except cells are grouped into subcategories
+
+```{r echo=FALSE, message=F, warning=F, fig.height=20, fig.width=20}
+top100 <- allmarkers.subclass %>% filter(p_val_adj < 0.01) %>% group_by(cluster) %>% top_n(100, avg_logFC)
+L5ALM.ITPT = SetAllIdent(L5ALM.ITPT, id = 'cluster')
+DoHeatmap(object = L5ALM.ITPT, genes.use = top100$gene, slim.col.label = TRUE, remove.key = TRUE,group.label.loc="top",group.label.rot=T)
+```
 
 
 
