--- a/analysis/DE_L5_IT-PT.Rmd
+++ b/analysis/DE_L5_IT-PT.Rmd
@@ -17,32 +17,26 @@ source("https://raw.githubusercontent.com/yasinkaymaz/cellRtools/master/main/fun
 # Differentially expressed genes between PT and IT
 
 ```{r echo=FALSE}
-
-load("data/Tasic2018-reAnalysis.RData")
+load("~/data/Tasic2018-reAnalysis_L5ITPT.RData")
 ```
 
 Comparing all IT cells to PT cells within the L5 layer using MAST test.
 
 ```{r echo=FALSE, message=FALSE, warning=FALSE}
-p <- ggplot(allmarkers.subclass, aes(avg_logFC, y=-1*log10(p_val_adj+10^-200), color=cluster ))+
-  geom_point(aes(text=sprintf("Gene: %s", gene)))+
-  ylab("-log10(padj)")+
-  xlab("log Fold Change")
-ggplotly(p)
-
-
+volcanoPlotly(allmarkers.subclass)
 ```
 
 ### Table for genes with significantly higher expression in **IT**:
 
-(padj < 0.01, avglogFC > 0.5)
+(padj < 0.01, avglogFC > 0.2)
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 allmarkers.subclass  %>% 
   select(-p_val)%>% 
   filter(cluster == "L5 IT") %>% 
   filter(p_val_adj < 0.01) %>%
-  filter(avg_logFC > 0.5) %>%
+  filter(avg_logFC > 0.2) %>%
+  filter(pct.1 > 0.5) %>% filter( ((pct.1 - pct.2)/max(pct.1,pct.2) > 0.7)) %>%
   datatable( extensions = 'Scroller', options = list(
     deferRender = TRUE,
     scrollY = 200,
@@ -53,14 +47,15 @@ allmarkers.subclass  %>%
 
 ### Table for genes with significantly higher expression in **PT**:
 
-(padj < 0.01, avglogFC > 0.5)
+(padj < 0.01, avglogFC > 0.2)
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 allmarkers.subclass  %>% 
   select(-p_val) %>% 
   filter(cluster == "L5 PT") %>% 
   filter(p_val_adj < 0.01) %>%
-  filter(avg_logFC > 0.5) %>%
+  filter(avg_logFC > 0.2) %>%
+  filter(pct.1 > 0.5) %>% filter( ((pct.1 - pct.2)/max(pct.1,pct.2) > 0.7)) %>%
   datatable( extensions = 'Scroller', options = list(
     deferRender = TRUE,
     scrollY = 200,
@@ -71,7 +66,7 @@ allmarkers.subclass  %>%
 ## Expression heatmap of top 200 differentially expressed genes between **IT and PT**
 
 ```{r echo=FALSE, message=F, warning=F, fig.height=20, fig.width=20}
-top100 <- allmarkers.subclass %>% filter(p_val_adj < 0.01) %>% group_by(cluster) %>% top_n(100, avg_logFC)
+top100 <- allmarkers.subclass %>% filter(p_val_adj < 0.01) %>% filter(pct.1 > 0.5) %>% filter( ((pct.1 - pct.2)/max(pct.1,pct.2) > 0.7)) %>% group_by(cluster) %>% top_n(100, avg_logFC)
 L5ALM.ITPT = SetAllIdent(L5ALM.ITPT, id = 'subclass')
 DoHeatmap(object = L5ALM.ITPT, genes.use = top100$gene, slim.col.label = TRUE, remove.key = TRUE,group.label.loc="top",group.label.rot=T)
 ```
@@ -79,9 +74,9 @@ DoHeatmap(object = L5ALM.ITPT, genes.use = top100$gene, slim.col.label = TRUE, r
 ## Same heatmap as above except cells are grouped into subcategories
 
 ```{r echo=FALSE, message=F, warning=F, fig.height=20, fig.width=20}
-top100 <- allmarkers.cluster %>% filter(p_val_adj < 0.01) %>% group_by(cluster) %>% top_n(100, avg_logFC)
+top20 <- allmarkers.cluster %>% filter(p_val_adj < 0.01) %>% group_by(cluster) %>% top_n(20, avg_logFC)
 L5ALM.ITPT = SetAllIdent(L5ALM.ITPT, id = 'cluster')
-DoHeatmap(object = L5ALM.ITPT, genes.use = top100$gene, slim.col.label = TRUE, remove.key = TRUE,group.label.loc="top",group.label.rot=T)
+DoHeatmap(object = L5ALM.ITPT, genes.use = top20$gene, slim.col.label = TRUE, remove.key = TRUE,group.label.loc="top",group.label.rot=T)
 ```
 
 
