--- a/analysis/DimensionReduction_Clustering.Rmd
+++ b/analysis/DimensionReduction_Clustering.Rmd
@@ -17,8 +17,10 @@ source("https://raw.githubusercontent.com/yasinkaymaz/cellRtools/master/main/fun
 
 
 ```{r echo=FALSE}
-
-load("data/Tasic2018-reAnalysis.RData")
+load("~/data/Tasic2018.seurat.Robj")
+Tasic2018 <- SeuratObj
+rm(SeuratObj)
+load("~/data/Tasic2018-reAnalysis_L5ITPT.RData")
 ```
 
 ## TSNE plots of **all ALM** cells in the study 
