Commit to changes in tables

--- a/analysis/DE_L5_IT-PT.Rmd
+++ b/analysis/DE_L5_IT-PT.Rmd
@@ -28,7 +28,7 @@ volcanoPlotly(allmarkers.subclass)
 
 ### Table for genes with significantly higher expression in **IT**:
 
-(padj < 0.01, avglogFC > 0.2)
+(padj < 0.01, avglogFC > 0.2, pct.1 > 0.5, pct.1-pct.2 > 0.25)
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 allmarkers.subclass  %>% 
@@ -36,7 +36,7 @@ allmarkers.subclass  %>%
   filter(cluster == "L5 IT") %>% 
   filter(p_val_adj < 0.01) %>%
   filter(avg_logFC > 0.2) %>%
-  filter(pct.1 > 0.5) %>% filter( ((pct.1 - pct.2)/max(pct.1,pct.2) > 0.7)) %>%
+  filter(pct.1 > 0.5) %>% filter( ((pct.1 - pct.2) > 0.25)) %>%
   datatable( extensions = 'Scroller', options = list(
     deferRender = TRUE,
     scrollY = 200,
@@ -47,7 +47,7 @@ allmarkers.subclass  %>%
 
 ### Table for genes with significantly higher expression in **PT**:
 
-(padj < 0.01, avglogFC > 0.2)
+(padj < 0.01, avglogFC > 0.2, pct.1 > 0.5, pct.1-pct.2 > 0.25)
 
 ```{r, echo=FALSE, message=FALSE, warning=FALSE}
 allmarkers.subclass  %>% 
@@ -55,7 +55,7 @@ allmarkers.subclass  %>%
   filter(cluster == "L5 PT") %>% 
   filter(p_val_adj < 0.01) %>%
   filter(avg_logFC > 0.2) %>%
-  filter(pct.1 > 0.5) %>% filter( ((pct.1 - pct.2)/max(pct.1,pct.2) > 0.7)) %>%
+  filter(pct.1 > 0.5) %>% filter( ((pct.1 - pct.2) > 0.25)) %>%
   datatable( extensions = 'Scroller', options = list(
     deferRender = TRUE,
     scrollY = 200,
