--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -9,4 +9,4 @@ output:
 Welcome to my research website.
 
 
-Here is the [GitHub Repository](https://github.com/yasinkaymaz/Harvard-NissenLab)
+Here is the **[GitHub Repository](https://github.com/yasinkaymaz/Harvard-NissenLab)**
